support maven package for windows and mac