@@ -171,51 +171,35 @@
             </plugin>
 
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
-                        <id>default-cli</id>
+                        <phase>package</phase>
                         <configuration>
-                            <mainClass>com.example.javafxdemo.MainApp</mainClass>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
-                            <noManPages>true</noManPages>
-                            <stripDebug>true</stripDebug>
-                            <noHeaderFiles>true</noHeaderFiles>
+                            <target>
+                                <exec executable="jpackage">
+                                    <arg value="--input" />
+                                    <arg value="${project.build.directory}" />
+                                    <arg value="--name" />
+                                    <arg value="ElasticSearchClient" />
+                                    <arg value="--main-jar" />
+                                    <arg value="${project.build.finalName}.jar" />
+                                    <arg value="--main-class" />
+                                    <arg value="com.example.javafxdemo.MainApp" />
+                                    <arg value="--type" />
+                                    <arg value="dmg" />
+                                    <arg value="--dest" />
+                                    <arg value="${project.build.directory}/dmg" />
+                                </exec>
+                            </target>
                         </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <!-- https://github.com/fvarrui/JavaPackager -->
-            <plugin>
-                <groupId>io.github.fvarrui</groupId>
-                <artifactId>javapackager</artifactId>
-                <version>1.6.6</version>
-                <configuration>
-                    <mainClass>com.example.javafxdemo.MainApp</mainClass>
-                    <bundleJre>true</bundleJre>
-                    <administratorRequired>false</administratorRequired>
-                    <generateInstaller>true</generateInstaller>
-                    <createZipball>false</createZipball>
-                    <createTarball>false</createTarball>
-                    <customizedJre>false</customizedJre>
-                    <displayName>ElasticSearchClient</displayName>
-                    <name>ElasticSearchClient</name>
-                    <platform>auto</platform>
-                    <vmArgs>
-                        <arg>--add-exports=java.base/com.sun.javafx=ALL-UNNAMED</arg>
-                        <arg>--add-exports=java.base/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</arg>
-                        <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.example.javafxdemo</arg>
-                        <arg>--add-exports=javafx.base/com.sun.javafx.event=com.example.javafxdemo</arg>
-                        <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control=com.example.javafxdemo</arg>
-                    </vmArgs>
-
-                </configuration>
-
             </plugin>
         </plugins>
     </build>
